@@ -10,10 +10,10 @@ TPSVG=.\images\title_page_plain.svg
 # HTML guide stuff
 HTMLDIR=html
 IMAGESDIR=html\images
-CSS=pytables_style.css
+CSS=usersguide_style.css
 
 # PDF guide stuff
-XML_CATALOG_FILES=.\custom_layer\pytables_catalog_windows.xml
+XML_CATALOG_FILES=.\custom_layer\catalog_windows.xml
 XML_DEBUG_CATALOG=1
 export XML_CATALOG_FILES XML_DEBUG_CATALOG
 
@@ -28,12 +28,12 @@ clean:
 
 # User's Guide in PDF format (1 file)
 usersguide.pdf: usersguide.xml $(TPSVG) $(allpngs)
-	xsltproc -o usersguide.fo pytables_fo.xsl usersguide.xml
+	xsltproc -o usersguide.fo custom_fo.xsl usersguide.xml
 	fop -q -c fop_conf.xml usersguide.fo usersguide.pdf
 
 # User's Guide in HTML format (1 chapter per file. Stored in $HTMLDIR)
 html/%.html: usersguide.xml $(allpngs)
-	xsltproc pytables_html.xsl usersguide.xml
+	xsltproc custom_html.xsl usersguide.xml
 	mkdir $(IMAGESDIR)
 	copy *.html $(HTMLDIR)
 	copy $(CSS) $(HTMLDIR)
