@@ -4,18 +4,19 @@
    "http://www.oasis-open.org/committees/entity/release/1.0/catalog.dtd">
 <catalog  xmlns="urn:oasis:names:tc:entity:xmlns:xml:catalog">
 
-  <nextCatalog catalog="C:/docbook-xsl-1.72.0/catalog.xml"/>
+  <nextCatalog catalog="/etc/xml/catalog"/>
 
-  <!-- Locate the Docbook XSL stylesheets in my Windows XP box -->
-  <group xml:base="file:///C:/docbook-xsl-1.72.0/">
+  <!-- Locate XSL stylesheets -->
+  <group xml:base="file:///usr/share/xml/docbook/stylesheet/ldp/">
+    <!-- The location of the docbook stylesheets in this system -->
     <uri name="custom_layer/fo/tldp-print.xsl" uri="fo/tldp-print.xsl"/>
     <uri name="custom_layer/html/tldp-chapters.xsl" uri="html/tldp-chapters.xsl"/>
   </group>
 
-  <!-- The location of the customisation layers for PyTables and ViTables guides -->
+  <!-- The location of the customisation layer for ViTables guide -->
   <!-- URIs are relative to the catalog entry file path -->
-  <uri name="pytables_fo.xsl" uri="fo/pytables_fo.xsl"/>
-  <uri name="pytables_html.xsl" uri="html/pytables_html.xsl"/>
+  <uri name="custom_fo.xsl" uri="fo/custom_fo.xsl"/>
+  <uri name="custom_html.xsl" uri="html/custom_html.xsl"/>
 
 
 </catalog>
