@@ -4,13 +4,13 @@
 
     <!-- The base stylesheet -->
     <xsl:import href="tldp-chapters.xsl"/>
-    <xsl:include href="../common/pytables_common.xsl"/>
+    <xsl:include href="../common/custom_common.xsl"/>
 
     <!-- The output encoding -->
     <xsl:param name="chunker.output.encoding" select="'UTF-8'"></xsl:param>
 
     <!-- The CSS location -->
-    <xsl:param name="html.stylesheet" select="'pytables_style.css'"></xsl:param>
+    <xsl:param name="html.stylesheet" select="'usersguide_style.css'"></xsl:param>
 
     <!-- ADMONITION -->
     <!-- * use graphical admonitions in PNG format -->
