@@ -2,7 +2,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
         <title>Document Not Found</title>
-        <link rel="stylesheet" href="pytables_style.css" type="text/css">
+        <link rel="stylesheet" href="usersguide_style.css" type="text/css">
         <meta name="generator" content="DocBook XSL Stylesheets V1.73.2">
     </head>
     <body bgcolor="white" text="black" link="#0000FF" vlink="#840084" alink="#0000FF">
